# apxs

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  apxs.cc
.github/workflows/: greetings.yml
analysis/: accelerate.py  analysis-Copy1.ipynb  analysis.ipynb  spectrum.ipynb
analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb
analysis/data/C1_Window/: APXS-run0-rank0_nt_hits.csv  APXS-run0-rank1000_nt_hits.csv  APXS-run0-rank1001_nt_hits.csv  APXS-run0-rank1002_nt_hits.csv  APXS-run0-rank1003_nt_hits.csv  APXS-run0-rank1004_nt_hits.csv  APXS-run0-rank1005_nt_hits.csv  APXS-run0-rank1006_nt_hits.csv  APXS-run0-rank1007_nt_hits.csv  APXS-run0-rank1008_nt_hits.csv  APXS-run0-rank1009_nt_hits.csv  APXS-run0-rank100_nt_hits.csv  APXS-run0-rank1010_nt_hits.csv  APXS-run0-rank1011_nt_hits.csv  APXS-run0-rank1012_nt_hits.csv  APXS-run0-rank1013_nt_hits.csv  APXS-run0-rank1014_nt_hits.csv  APXS-run0-rank1015_nt_hits.csv  APXS-run0-rank1016_nt_hits.csv  APXS-run0-rank1017_nt_hits.csv  APXS-run0-rank1018_nt_hits.csv  APXS-run0-rank1019_nt_hits.csv  APXS-run0-rank101_nt_hits.csv  APXS-run0-rank1020_nt_hits.csv  APXS-run0-rank1021_nt_hits.csv  APXS-run0-rank1022_nt_hits.csv  APXS-run0-rank1023_nt_hits.csv  APXS-run0-rank1024_nt_hits.csv  APXS-run0-rank1025_nt_hits.csv  APXS-run0-rank1026_nt_hits.csv  APXS-run0-rank1027_nt_hits.csv  APXS-run0-rank1028_nt_hits.csv  APXS-run0-rank1029_nt_hits.csv  APXS-run0-rank102_nt_hits.csv  APXS-run0-rank1030_nt_hits.csv  APXS-run0-rank1031_nt_hits.csv  APXS-run0-rank1032_nt_hits.csv  APXS-run0-rank1033_nt_hits.csv  APXS-run0-rank1034_nt_hits.csv  APXS-run0-rank1035_nt_hits.csv  (+14686 more)
analysis/data/C2_Window/: APXS-run0-rank0_nt_hits.csv  APXS-run0-rank1000_nt_hits.csv  APXS-run0-rank1001_nt_hits.csv  APXS-run0-rank1002_nt_hits.csv  APXS-run0-rank1003_nt_hits.csv  APXS-run0-rank1004_nt_hits.csv  APXS-run0-rank1005_nt_hits.csv  APXS-run0-rank1006_nt_hits.csv  APXS-run0-rank1007_nt_hits.csv  APXS-run0-rank1008_nt_hits.csv  APXS-run0-rank1009_nt_hits.csv  APXS-run0-rank100_nt_hits.csv  APXS-run0-rank1010_nt_hits.csv  APXS-run0-rank1011_nt_hits.csv  APXS-run0-rank1012_nt_hits.csv  APXS-run0-rank1013_nt_hits.csv  APXS-run0-rank1014_nt_hits.csv  APXS-run0-rank1015_nt_hits.csv  APXS-run0-rank1016_nt_hits.csv  APXS-run0-rank1017_nt_hits.csv  APXS-run0-rank1018_nt_hits.csv  APXS-run0-rank1019_nt_hits.csv  APXS-run0-rank101_nt_hits.csv  APXS-run0-rank1020_nt_hits.csv  APXS-run0-rank1021_nt_hits.csv  APXS-run0-rank1022_nt_hits.csv  APXS-run0-rank1023_nt_hits.csv  APXS-run0-rank1024_nt_hits.csv  APXS-run0-rank1025_nt_hits.csv  APXS-run0-rank1026_nt_hits.csv  APXS-run0-rank1027_nt_hits.csv  APXS-run0-rank1028_nt_hits.csv  APXS-run0-rank1029_nt_hits.csv  APXS-run0-rank102_nt_hits.csv  APXS-run0-rank1030_nt_hits.csv  APXS-run0-rank1031_nt_hits.csv  APXS-run0-rank1032_nt_hits.csv  APXS-run0-rank1033_nt_hits.csv  APXS-run0-rank1034_nt_hits.csv  APXS-run0-rank1035_nt_hits.csv  (+14960 more)
analysis/data/Material_Comparison_2023_14_11/Basalt/: APXS-run0-rank0_nt_hits.csv  APXS-run0-rank100_nt_hits.csv  APXS-run0-rank101_nt_hits.csv  APXS-run0-rank102_nt_hits.csv  APXS-run0-rank103_nt_hits.csv  APXS-run0-rank104_nt_hits.csv  APXS-run0-rank105_nt_hits.csv  APXS-run0-rank106_nt_hits.csv  APXS-run0-rank107_nt_hits.csv  APXS-run0-rank108_nt_hits.csv  APXS-run0-rank10_nt_hits.csv  APXS-run0-rank110_nt_hits.csv  APXS-run0-rank111_nt_hits.csv  APXS-run0-rank112_nt_hits.csv  APXS-run0-rank113_nt_hits.csv  APXS-run0-rank114_nt_hits.csv  APXS-run0-rank115_nt_hits.csv  APXS-run0-rank116_nt_hits.csv  APXS-run0-rank117_nt_hits.csv  APXS-run0-rank118_nt_hits.csv  APXS-run0-rank120_nt_hits.csv  APXS-run0-rank123_nt_hits.csv  APXS-run0-rank124_nt_hits.csv  APXS-run0-rank125_nt_hits.csv  APXS-run0-rank126_nt_hits.csv  APXS-run0-rank127_nt_hits.csv  APXS-run0-rank128_nt_hits.csv  APXS-run0-rank129_nt_hits.csv  APXS-run0-rank12_nt_hits.csv  (+4165 more)
analysis/data/SDD_Efficiency/: C1.csv
analysis/data/run0/: APXS_nt_hits.csv  APXS_nt_hits_t0.csv  APXS_nt_hits_t1.csv  APXS_nt_hits_t2.csv  APXS_nt_hits_t3.csv  APXS_nt_hits_t4.csv  APXS_nt_hits_t5.csv  APXS_nt_hits_t6.csv  APXS_nt_hits_t7.csv  APXS_nt_hits_t8.csv  APXS_nt_hits_t9.csv
geometry/: Beryllium_Transmission.csv  XrayTube.gdml  annular_source.gdml  sdd-C1.gdml  sdd-C2.gdml  sdd.gdml  sdd_beryllium.gdml
hpc/: load_modules.sh  multi_mat.sh  run_start.sh  start-job.1911726.err  toy_start.sh
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorHit.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
macros/: Co57Fe55.mac  CoFeTest.mac  X-ray_15_keV.txt  XrayTube.mac  XrayTubeSpectrum.mac  annular_source_colors.mac  apollo17orange.mac  basalt.mac  cobaltTest.mac  disks.mac  ferroannoriticanorthosite.mac  filter-detector.mac  filter-full.mac  filter.mac  howlite.mac  impactmeltbreccia.mac  marsTest.mac  moonTest.mac  multi_mat.mac  pigeonitebasalt.mac  run_hpc.mac  start.mac  superrun.mac  test.mac  toy_hpc.mac  troctolite.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorHit.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  TrackInformation.cc  TrackingAction.cc
(+15000 files in other folders)
